--- a/dependent.gradle
+++ b/dependent.gradle
@@ -147,3 +147,14 @@ install.dependsOn cleanPom
 tasks.withType(JavaCompile){
     options.warnings = false
 }
+
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+	classifier 'sources'
+	from sourceSets.main.allSource
+}
+
+artifacts {
+	archives sourcesJar
+}
+
