--- a/dependent.gradle
+++ b/dependent.gradle
@@ -4,7 +4,7 @@ apply plugin: 'java'
 description = ''
 
 group = 'no.dependent'
-version = '0.27'
+version = '0.36'
 
 repositories {
 	    maven { url rootProject.getRootDir().toURL().toString()+"build/artifacts/" };
@@ -12,18 +12,18 @@ repositories {
 	}
 
 dependencies {
-    compile group: 'org.eclipse.aether', name: 'aether-api', version:'0.9.0.M3'
-    compile group: 'org.eclipse.aether', name: 'aether-spi', version:'0.9.0.M3'
-    compile group: 'org.eclipse.aether', name: 'aether-util', version:'0.9.0.M3'
-    compile group: 'org.eclipse.aether', name: 'aether-impl', version:'0.9.0.M3'
-    compile group: 'org.eclipse.aether', name: 'aether-connector-basic', version:'0.9.0.M3'
-    compile group: 'org.eclipse.aether', name: 'aether-transport-file', version:'0.9.0.M3'
-    compile group: 'org.eclipse.aether', name: 'aether-transport-http', version:'0.9.0.M3'
+    compile group: 'org.eclipse.aether', name: 'aether-api', version:'1.1.0'
+    compile group: 'org.eclipse.aether', name: 'aether-spi', version:'1.1.0'
+    compile group: 'org.eclipse.aether', name: 'aether-util', version:'1.1.0'
+    compile group: 'org.eclipse.aether', name: 'aether-impl', version:'1.1.0'
+    compile group: 'org.eclipse.aether', name: 'aether-connector-basic', version:'1.1.0'
+    compile group: 'org.eclipse.aether', name: 'aether-transport-file', version:'1.1.0'
+    compile group: 'org.eclipse.aether', name: 'aether-transport-http', version:'1.1.0'
     compile group: 'org.apache.maven', name: 'maven-aether-provider', version:'3.1.0'
-    compile(group: 'org.eclipse.sisu', name: 'org.eclipse.sisu.plexus', version:'0.0.0.M3') {
+/*    compile(group: 'org.eclipse.sisu', name: 'org.eclipse.sisu.plexus', version:'1.1.0') {
         exclude(module: 'cdi-api')
         exclude(module: 'jsr305')
-    }
+    }*/
     compile(group: 'org.sonatype.sisu', name: 'sisu-guice', version:'3.1.0', classifier:'no_aop') {
         exclude(module: 'aopalliance')
         exclude(module: 'sisu-guava')
