--- a/dependent.gradle
+++ b/dependent.gradle
@@ -1,36 +1,16 @@
 apply plugin: 'maven'
 apply plugin: 'java'
-
+sourceCompatibility = 10
 description = ''
 
 group = 'no.dependent'
-version = '0.89'
+version = '2.0'
 
 repositories {
 	    maven { url rootProject.getRootDir().toURL().toString()+"build/artifacts/" };
 	    maven { url "http://kamino.local.dbwatch.com:8081/nexus/content/groups/public/" }
 	}
 
-dependencies {
-    compile group: 'org.eclipse.aether', name: 'aether-api', version:'1.1.0'
-    compile group: 'org.eclipse.aether', name: 'aether-spi', version:'1.1.0'
-    compile group: 'org.eclipse.aether', name: 'aether-util', version:'1.1.0'
-    compile group: 'org.eclipse.aether', name: 'aether-impl', version:'1.1.0'
-    compile group: 'org.eclipse.aether', name: 'aether-connector-basic', version:'1.1.0'
-    compile group: 'org.eclipse.aether', name: 'aether-transport-file', version:'1.1.0'
-    compile group: 'org.eclipse.aether', name: 'aether-transport-http', version:'1.1.0'
-    compile group: 'org.apache.maven', name: 'maven-aether-provider', version:'3.1.0'
-/*    compile(group: 'org.eclipse.sisu', name: 'org.eclipse.sisu.plexus', version:'1.1.0') {
-        exclude(module: 'cdi-api')
-        exclude(module: 'jsr305')
-    }*/
-    compile(group: 'org.sonatype.sisu', name: 'sisu-guice', version:'3.1.0', classifier:'no_aop') {
-        exclude(module: 'aopalliance')
-        exclude(module: 'sisu-guava')
-    }
-    compile group: 'com.google.guava', name: 'guava', version:'12.0'
-    testCompile group: 'junit', name:'junit', version: '4.11'
-}
 
 buildscript {
     repositories {
